--- a/SCorona/css/style.css
+++ b/SCorona/css/style.css
@@ -60,8 +60,37 @@ main{
 }
 
 [class*="__container"]{
-    max-width: 1057px;
+    max-width: 1087px;
     margin: 0px auto;
+    padding: 0px 15px;
+}
+/*PC*/
+@media(max-width: 1087px){
+    [class*="__container"]{
+        max-width: 970px;
+    }
+    
+}
+/*TABLET*/
+@media(max-width: 991.98px){
+    [class*="__container"]{
+        max-width:750px;
+    }
+    .header__container {      
+        min-height: 80px;     
+    }
+    .header__button {
+        flex: 0 0 170px;
+    }
+    .menu__item {
+        margin: 0px 30px 0px 0px;
+    }
+}
+/*MOBILE*/
+@media(max-width: 767.98px){
+    [class*="__container"]{
+        max-width:none;
+    }  
 }
 
 .header {
@@ -100,6 +129,7 @@ main{
 .menu__item {
     margin: 0px 40px 0px 0px;
 }
+
 .menu__link {
     font-family: Raleway;
     text-transform: uppercase;
@@ -137,3 +167,101 @@ main{
 .button_blue:hover{
     background-color: #70a3f7;
 }
+
+/* ====================================================================== */
+
+.main {
+}
+.get-started {
+    background: #fafbfd;
+    padding: 150px 0px 50px 0px;
+}
+.get-started__container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.get-started__content {
+    flex: 0 1 48%;
+    padding: 0px 0px 0px 20px;
+}
+.get-started__block-text {
+    max-width: 410px;
+}
+
+.get-started__image {
+    flex: 0 1 52%;
+}
+.get-started__video {
+    flex: 1 1 100%;
+    padding: 0px 0px 0px 20px;
+   
+}
+.video-get-started {
+   display: inline-flex;
+   align-items: center;
+}
+.get-started__image img{
+    max-width: 100%;
+    margin: 0px 0px 0px 20px;
+}
+.video-get-started__icon {
+   flex: 0 0  44px;
+}
+.vidio-get-started__body {
+    padding: 0px 0px 0px 12px;
+}
+
+.vidio-get-started__title:not(:last-child){
+    margin: 0px 0px 5px 0px;
+}
+
+.video-get-started__title {
+    color: #B0B0B0;
+    font-size: 13px;
+    line-height: 126%;
+    letter-spacing: 1.5px;
+}
+.video-get-started__text {
+    text-transform: uppercase;
+    font-size: 9px;
+    line-height: 126%;
+    letter-spacing: 2px;
+    color: #000;
+}
+
+/*----------------------------------*/
+.block-text {
+}
+.block-text__title {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 126%;
+    color: #000;
+}
+
+.block-text__title:not(:last-child){
+    margin: 0px 0px 12px 0px;
+}
+
+.block-text__title span {
+    color: #f37a82;
+}
+
+.block-text__title_blue span {
+    color: #4285f4;
+}
+.block-text__text {
+    line-height: 138.5%;
+
+}
+
+.block-text__text:not(:last-child){
+    margin: 0px 0px 24px 0px;
+}
+
+.block-text__button {
+}
+.button {
+}
+/*----------------------------------*/
