--- a/SCorona/css/style.css
+++ b/SCorona/css/style.css
@@ -174,13 +174,35 @@ main{
 }
 .get-started {
     background: #fafbfd;
-    padding: 150px 0px 50px 0px;
+   
 }
 .get-started__container {
+    padding: 150px 15px 50px 15px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    position: relative;
 }
+
+.get-started__container::before{
+    content: "";
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    right: 267px;
+    top: 0;
+    
+    transform: translate(100%, 0px);
+    border-radius: 30px 0px 0px 30px;
+    background-color: #ec5863;
+}
+
+@media(max-width: 991.98px){
+    .get-started__container::before{
+        right: 185px;
+    }
+}
+
 .get-started__content {
     flex: 0 1 48%;
     padding: 0px 0px 0px 20px;
@@ -191,6 +213,8 @@ main{
 
 .get-started__image {
     flex: 0 1 52%;
+    position: relative;
+    z-index: 2;
 }
 .get-started__video {
     flex: 1 1 100%;
