--- a/SCorona/css/style.css
+++ b/SCorona/css/style.css
@@ -289,3 +289,79 @@ main{
 .button {
 }
 /*----------------------------------*/
+
+/*----------------StaySave------------------*/
+.stay-safe {
+    padding: 80px 0;
+}
+.stay_save__container {
+    display: flex;
+    align-items: center;
+}
+.stay-save__media {
+    flex: 0 1 50%;
+    padding: 0px 0px 0px 47px;
+    
+}
+
+.stay-save__content {
+    flex: 0 1 50%;
+}
+.stay-save__block-text {
+}
+
+.media-stay-safe{
+    width: 373px; 
+    padding: 56px 0px 27px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.media-stay-safe__image {
+    display:inline-block;
+    box-shadow: 2px 4px 32px rgba(0, 0, 0, 0.12);
+    border-radius: 16px;
+    position: relative;
+}
+
+.media-stay-safe__image img{
+    position: relative;
+    z-index: 2;
+}
+
+.media-stay-safe__image::after{
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 12px;
+    width: 206px;
+    height: 27px;
+    z-index: 1;
+    background: rgba(240, 240, 240, 0.49);
+    border-radius: 16px;
+}
+
+.media-stay-save__item{
+    position: absolute;
+    background-color: #ec5863;
+    border-radius: 30px;
+    width: 77px;
+    height: 77px;
+}
+
+.media-stay-save__item_1{
+    top: 0;
+    left: 0;
+    width: 147px;
+    height: 147px;
+}
+
+.media-stay-save__item_2{
+    bottom: 0;
+    left: 33px;
+}
+
+.media-stay-save__item_3{
+    bottom: 107px;
+    right: 34px;
+}
